translations fix and split

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -43,15 +43,23 @@
     },
     "internal": "Internal Server Error"
   },
-
   "shop": {
+    "title": "Shop",
+    "spend": "Spend",
+    "buy": "Buy",
+    "buyPremium": "Buy Premium",
+    "doghouses": "Doghouses",
+    "renameTokens": "Rename Tokens",
+    "repairKits": "Repair Kits",
+    "energy": "Energy",
+    "treatPacks": "Treat Packs",
+    "subscriptions": "Subscriptions",
     "product": {
       "treats": "Treats",
       "premiumSubscription": "Premium Subscription",
       "{itemId}": "{itemId}"
     }
   },
-
   "quests": {
     "claim": {
       "success": "Claimed: {reward}"
@@ -103,7 +111,6 @@
       "LEVEL_UP": "Reach {target} new level(s)"
     }
   },
-
   "rewards": {
     "description": {
       "TREATS": "{amount} Treats",
@@ -114,5 +121,101 @@
       "DOGHOUSES": "{amount} Extra Doghouse",
       "ENERGY_RESTORE": "Full Energy Restore"
     }
-  }
+  },
+  "statsTab": "Stats",
+  "dailyQuestsTab": "Daily Quests",
+  "leaderboardsTab": "Leaderboards",
+  "statsTitle": "Stats",
+  "level": "Level",
+  "levelWithNumber": "Level {level}",
+  "levelTooltip": "Your current level",
+  "xpToNext": "XP to next level",
+  "xpAbbrev": "XP",
+  "pointsToAllocate": "points to allocate",
+  "allPointsAssigned": "All points assigned",
+  "save": "Save",
+  "reset": "Reset",
+  "power": "Power",
+  "stamina": "Stamina",
+  "reach": "Reach",
+  "fortification": "Fortification",
+  "attackLabel": "Attack: {min}–{max}",
+  "maxEnergyLabel": "Max energy {n}",
+  "rangeLabel": "Range {n}m",
+  "doghouseHpLabel": "Doghouse HP {n}",
+  "whatIsPower": "What is Power?",
+  "whatIsStamina": "What is Stamina?",
+  "whatIsReach": "What is Reach?",
+  "whatIsFortification": "What is Fortification?",
+  "availableDoghousesTitle": "Available Doghouses",
+  "energyTitle": "Energy",
+  "doghouseBuffs": "Doghouse Buffs",
+  "gotIt": "Got it",
+  "premiumBadge": "Premium",
+  "premiumExpires": "Expires: {date}",
+  "manageSubscription": "Manage subscription",
+  "unlimited": "Unlimited",
+  "powerDesc": "Damage dealt to doghouses. Current attack damage: {min}–{max}. Each point increases both min and max by 1.",
+  "staminaDesc": "Increases max energy so you can attack or repair your doghouses more often. Current max energy: {n}. (+10 per point, starting from 100)",
+  "reachDesc": "Range on the map for interacting with doghouses (attack or repair). Current range: {n} m. (+10 m per point, starting from 200 m)",
+  "fortificationDesc": "Increases all your doghouses' max HP so they are harder to destroy. Current doghouse max HP: {n}. (+20 per point, starting from 100)",
+  "dateLabel": "Date",
+  "hpAbbrev": "HP",
+  "sortBy": "Sort by",
+  "exitEditMode": "Exit edit mode",
+  "editDoghouses": "Edit doghouses",
+  "noDoghousesYet": "No doghouses yet",
+  "goToMapToBuildFirst": "Go to the map to build your first doghouse!",
+  "doghouseNamePlaceholder": "Doghouse name",
+  "editName": "Edit name",
+  "findPosition": "Find your position",
+  "turnOnLocation": "Please turn on location",
+  "turnOnGpsWait": "Please turn on your GPS and wait to load",
+  "clickButtonBelow": "and click button below",
+  "signInWithGoogle": "Sign-in with Google",
+  "health": "Health",
+  "availableBuffs": "Available Buffs",
+  "confirm": "Confirm",
+  "cancel": "Cancel",
+  "tapTimesToAttack": "Tap {n} time(s) to attack!",
+  "tapTimesToRepair": "Tap {n} time(s) to repair!",
+  "notEnoughEnergyNeed": "Not enough energy! Need {n} energy.",
+  "doghouseFullHealth": "Doghouse is already at full health!",
+  "destroyedText": "DESTROYED!",
+  "appSettings": "App Settings",
+  "language": "Language",
+  "chooseLanguage": "Choose your preferred language",
+  "notifications": "Push Notifications",
+  "notificationsDesc": "Get notified about game events",
+  "darkMode": "Dark Mode",
+  "darkModeDesc": "Switch to dark theme",
+  "signOut": "Sign Out",
+  "contactUs": "Contact Us",
+  "contactDesc": "For any inquiries, please email us at:",
+  "attributions": "Attributions",
+  "userUnknown": "Unknown User",
+  "userNoEmail": "No email",
+  "refreshing": "Refreshing...",
+  "hoursAbbrev": "h",
+  "minutesAbbrev": "m",
+  "remainingTime": "Remaining time",
+  "loading": "Loading...",
+  "loadingDailyQuests": "Loading daily quests...",
+  "noQuestsToday": "No quests available today",
+  "claim": "Claim",
+  "claimed": "Claimed",
+  "leaderboardTopLevels": "Top Levels",
+  "leaderboardMasterBuilders": "Master Builders",
+  "leaderboardTopDestroyers": "Top Destroyers",
+  "leaderboardGeneric": "Leaderboard",
+  "leaderboardColLevel": "Level",
+  "leaderboardColBuilt": "Built",
+  "leaderboardColDestroyed": "Destroyed",
+  "leaderboardColScore": "Score",
+  "leaderboardFooter": "{total} total players • Updated {date}",
+  "leaderboardTotalPlayers": "total players",
+  "leaderboardUpdated": "Updated",
+  "navMyDog": "My Dog",
+  "doghousesTitle": "Doghouses",
+  "navProfile": "Profile"
 }
