--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -54,10 +54,30 @@
     "energy": "Energie",
     "treatPacks": "Leckerli-Pakete",
     "subscriptions": "Abonnements",
+    "total": "Gesamt",
+    "purchaseSuccessTitle": "Kauf erfolgreich",
+    "purchaseTreatsSuccessDesc": "Du hast {spent} Leckerlis für {item} ausgegeben.",
+    "purchaseRealSuccessDesc": "Du hast erfolgreich {quantity} × {item} gekauft.",
+    "purchaseFailed": "Kauf fehlgeschlagen. Bitte versuche es erneut.",
     "product": {
       "treats": "Leckerlis",
       "premiumSubscription": "Premium-Abonnement",
-      "{itemId}": "{itemId}"
+      "{itemId}": "{itemId}",
+      "doghouse_1_pack": { "name": "1er-Pack Hundehütte", "description": "Du kannst 1 zusätzliche Hundehütte platzieren" },
+      "doghouse_3_pack": { "name": "3er-Pack Hundehütten", "description": "Du kannst 3 zusätzliche Hundehütten platzieren" },
+      "doghouse_6_pack": { "name": "6er-Pack Hundehütten", "description": "Du kannst 6 zusätzliche Hundehütten platzieren" },
+      "dog_rename": { "name": "Token Hund umbenennen", "description": "Kaufe eine Umbenennung für deinen Hund" },
+      "doghouse_rename": { "name": "Token Hundehütte umbenennen", "description": "Kaufe eine Umbenennung für deine Hundehütte" },
+      "repair_50": { "name": "Reparatur 50", "description": "" },
+      "repair_max": { "name": "Vollreparatur", "description": "" },
+      "energy_10_boost": { "name": "Energie-Boost 10", "description": "" },
+      "energy_50_boost": { "name": "Energie-Boost 50", "description": "" },
+      "small_treats": { "name": "Kleine Leckerlis", "description": "100 Leckerlis" },
+      "tasty_handful": { "name": "Leckere Handvoll", "description": "700 Leckerlis" },
+      "snack_sack": { "name": "Snack-Sack", "description": "1600 Leckerlis" },
+      "mega_munch": { "name": "Mega-Munch-Beutel", "description": "3600 Leckerlis" },
+      "ultimate_treat": { "name": "Ultimative Leckerli-Kiste", "description": "12500 Leckerlis" },
+      "premium": { "name": "Premium", "description": "Premium-Funktionen freischalten" }
     }
   },
   "quests": {
