--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -54,10 +54,30 @@
     "energy": "Energia",
     "treatPacks": "Pacotes de guloseimas",
     "subscriptions": "Subscrições",
+    "total": "Total",
+    "purchaseSuccessTitle": "Compra concluída",
+    "purchaseTreatsSuccessDesc": "Você gastou {spent} guloseimas em {item}.",
+    "purchaseRealSuccessDesc": "Você comprou com sucesso {quantity} × {item}.",
+    "purchaseFailed": "Falha na compra. Tente novamente.",
     "product": {
       "treats": "Guloseimas",
       "premiumSubscription": "Subscrição Premium",
-      "{itemId}": "{itemId}"
+      "{itemId}": "{itemId}",
+      "doghouse_1_pack": { "name": "Pacote 1 casinha", "description": "Você pode colocar 1 casinha adicional" },
+      "doghouse_3_pack": { "name": "Pacote 3 casinhas", "description": "Você pode colocar 3 casinhas adicionais" },
+      "doghouse_6_pack": { "name": "Pacote 6 casinhas", "description": "Você pode colocar 6 casinhas adicionais" },
+      "dog_rename": { "name": "Ficha renomear cão", "description": "Compre uma renomeação para o seu cão" },
+      "doghouse_rename": { "name": "Ficha renomear casinha", "description": "Compre uma renomeação para sua casinha" },
+      "repair_50": { "name": "Reparo 50", "description": "" },
+      "repair_max": { "name": "Reparo total", "description": "" },
+      "energy_10_boost": { "name": "Impulso de energia 10", "description": "" },
+      "energy_50_boost": { "name": "Impulso de energia 50", "description": "" },
+      "small_treats": { "name": "Guloseimas pequenas", "description": "100 guloseimas" },
+      "tasty_handful": { "name": "Punhado saboroso", "description": "700 guloseimas" },
+      "snack_sack": { "name": "Saco de snacks", "description": "1600 guloseimas" },
+      "mega_munch": { "name": "Saco mega mordida", "description": "3600 guloseimas" },
+      "ultimate_treat": { "name": "Caixa de guloseimas definitiva", "description": "12500 guloseimas" },
+      "premium": { "name": "Premium", "description": "Desbloqueie recursos premium" }
     }
   },
   "quests": {
