--- a/src/i18n/ur.json
+++ b/src/i18n/ur.json
@@ -54,10 +54,30 @@
     "energy": "توانائی",
     "treatPacks": "ٹریٹ پیکس",
     "subscriptions": "سبسکرپشنز",
+    "total": "کل",
+    "purchaseSuccessTitle": "خریداری مکمل",
+    "purchaseTreatsSuccessDesc": "آپ نے {item} پر {spent} ٹریٹس خرچ کیے۔",
+    "purchaseRealSuccessDesc": "آپ نے کامیابی سے {quantity} × {item} خرید لیا۔",
+    "purchaseFailed": "خریداری ناکام رہی۔ دوبارہ کوشش کریں۔",
     "product": {
       "treats": "ٹریٹس",
       "premiumSubscription": "پریمیم سبسکرپشن",
-      "{itemId}": "{itemId}"
+      "{itemId}": "{itemId}",
+      "doghouse_1_pack": { "name": "1 کتے کے گھر کا پیک", "description": "آپ 1 اضافی کتے کا گھر رکھ سکتے ہیں" },
+      "doghouse_3_pack": { "name": "3 کتوں کے گھروں کا پیک", "description": "آپ 3 اضافی کتوں کے گھر رکھ سکتے ہیں" },
+      "doghouse_6_pack": { "name": "6 کتوں کے گھروں کا پیک", "description": "آپ 6 اضافی کتوں کے گھر رکھ سکتے ہیں" },
+      "dog_rename": { "name": "کتے کا نام بدلنے کا ٹوکن", "description": "اپنے کتے کے لیے ایک بار نام بدلیں" },
+      "doghouse_rename": { "name": "کتے کے گھر کا نام بدلنے کا ٹوکن", "description": "اپنے کتے کے گھر کے لیے ایک بار نام بدلیں" },
+      "repair_50": { "name": "مرمت 50", "description": "" },
+      "repair_max": { "name": "مکمل مرمت", "description": "" },
+      "energy_10_boost": { "name": "توانائی 10 بوسٹ", "description": "" },
+      "energy_50_boost": { "name": "توانائی 50 بوسٹ", "description": "" },
+      "small_treats": { "name": "چھوٹی ٹریٹس", "description": "100 ٹریٹس" },
+      "tasty_handful": { "name": "مزے دار مٹھّھی", "description": "700 ٹریٹس" },
+      "snack_sack": { "name": "سنیک بیگ", "description": "1600 ٹریٹس" },
+      "mega_munch": { "name": "میگا منچ بیگ", "description": "3600 ٹریٹس" },
+      "ultimate_treat": { "name": "حتمی ٹریٹس کریٹ", "description": "12500 ٹریٹس" },
+      "premium": { "name": "پریمیم", "description": "پریمیم خصوصیات کو ان لاک کریں" }
     }
   },
   "quests": {
